CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(TestField
        VERSION 0.0
        HOMEPAGE_URL https://github.com/AarnoldGad/ZucchiniTestField.git
        LANGUAGES C CXX
        )

MESSAGE(STATUS "Configuring TestField")

SET(CMAKE_CONFIGURATION_TYPES Release Debug)

FIND_PACKAGE(Threads REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_SUBDIRECTORY(ZucchiniEngine)
ADD_SUBDIRECTORY(ZGraphics2D)
ADD_SUBDIRECTORY(TestField)

